--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   firebase_storage: ^8.0.5
   #---------------
   flutter_native_splash: ^1.1.8+4
-
+  lottie: ^1.0.1
+  flutter_signin_button: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -54,6 +55,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/images/
+      - assets/json/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
