--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_sign_in: ^5.0.2
   cloud_firestore: ^1.0.7
   firebase_storage: ^8.0.5
+  flutter_facebook_auth: ^3.3.3+1
   #---------------
   flutter_native_splash: ^1.1.8+4
   flutter_launcher_icons: ^0.9.0
