--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   bubble_tab_indicator: ^0.1.6
   sliding_up_panel: ^2.0.0+1
   google_fonts: ^2.1.0
+  flutter_rating_bar: ^4.0.0
   
 dev_dependencies:
   flutter_test:
