--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,32 +23,29 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
-  get: ^4.1.4 # getX 
-
-  # firebase things
-  firebase_core: ^1.2.0
-  firebase_auth: ^1.2.0
-  google_sign_in: ^5.0.2
+  bubble_tab_indicator: ^0.1.6
+  cached_network_image: ^3.0.0
   cloud_firestore: ^2.2.0
+  cupertino_icons: ^1.0.2
+  firebase_auth: ^1.2.0
+  firebase_core: ^1.2.0
   firebase_storage: ^8.1.0
   flutter_facebook_auth: ^3.3.3+1
-  #---------------
-  flutter_native_splash: ^1.1.8+4
   flutter_launcher_icons: ^0.9.0
-  bubble_tab_indicator: ^0.1.6
-  sliding_up_panel: ^2.0.0+1
-  google_fonts: ^2.1.0
+  flutter_native_splash: ^1.1.8+4
   flutter_rating_bar: ^4.0.0
-  
+  get: ^4.1.4
+  google_fonts: ^2.1.0
+  google_sign_in: ^5.0.2
+  image_picker: ^0.8.0+1
+  sliding_up_panel: ^2.0.0+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -59,17 +56,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/images/
-      - assets/json/
+    - assets/images/
+    - assets/json/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
