--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,6 @@ dependencies:
   flutter:
     sdk: flutter
   bubble_tab_indicator: ^0.1.6
-  cached_network_image: ^3.0.0
   cloud_firestore: ^2.2.0
   cupertino_icons: ^1.0.2
   firebase_auth: ^1.2.0
@@ -38,6 +37,7 @@ dependencies:
   google_fonts: ^2.1.0
   google_sign_in: ^5.0.2
   image_picker: ^0.8.0+1
+  pin_code_fields: ^7.2.0
   sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
