--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^0.8.0+1
   pin_code_fields: ^7.2.0
   sliding_up_panel: ^2.0.0+1
+  sms_receiver: ^0.3.1+1
 
 dev_dependencies:
   flutter_test:
