--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,12 @@ dependencies:
   google_sign_in: ^5.0.2
   image_picker: ^0.8.0+1
   intl: ^0.17.0
+  multi_select_flutter: ^4.0.0
+  photo_view: ^0.11.1
   pin_code_fields: ^7.2.0
   pull_to_refresh: ^2.0.0
   sliding_up_panel: ^2.0.0+1
   url_launcher: ^6.0.6
-  multi_select_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
