--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   sliding_up_panel: ^2.0.0+1
   url_launcher: ^6.0.6
+  textfield_tags: ^1.3.1
 
 dev_dependencies:
   flutter_test:
