--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   bubble_tab_indicator: ^0.1.6
+  chips_choice: ^2.0.1
   cloud_firestore: ^2.2.0
   cupertino_icons: ^1.0.2
   firebase_auth: ^1.2.0
@@ -34,6 +35,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.0
   flutter_native_splash: ^1.1.8+4
   flutter_rating_bar: ^4.0.0
+  flutter_shimmer: ^1.3.0
   get: ^4.1.4
   google_fonts: ^2.1.0
   google_sign_in: ^5.0.2
@@ -44,8 +46,8 @@ dependencies:
   pin_code_fields: ^7.2.0
   pull_to_refresh: ^2.0.0
   sliding_up_panel: ^2.0.0+1
-  url_launcher: ^6.0.6
   textfield_tags: ^1.3.1
+  url_launcher: ^6.0.6
 
 dev_dependencies:
   flutter_test:
