--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_auth: ^1.2.0
   firebase_core: ^1.2.0
   firebase_storage: ^8.1.0
+  flutter_date_picker_timeline: ^0.3.2
   flutter_datetime_picker: ^1.5.1
   flutter_facebook_auth: ^3.3.3+1
   flutter_launcher_icons: ^0.9.0
