--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^0.8.0+1
   intl: ^0.17.0
   multi_select_flutter: ^4.0.0
+  number_slide_animation: ^0.2.1
   photo_view: ^0.11.1
   pin_code_fields: ^7.2.0
   pull_to_refresh: ^2.0.0
