--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   textfield_tags: ^1.3.1
   url_launcher: ^6.0.6
+  introduction_screen: ^2.1.0
 
 dev_dependencies:
   flutter_test:
