--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   photo_view: ^0.11.1
   pin_code_fields: ^7.2.0
   pull_to_refresh: ^2.0.0
+  shared_preferences: ^2.0.6
   sliding_up_panel: ^2.0.0+1
   textfield_tags: ^1.3.1
   url_launcher: ^6.0.6
