--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   textfield_tags: ^2.0.2
   url_launcher: ^6.0.6
+  odometer: ^3.0.0
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
