--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=C:\\Users\\fmere\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\Development\\Pro\\flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=1.0.0
 flutter.versionCode=1
