--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\Development\Pro\flutter
-FLUTTER_APPLICATION_PATH=D:\Finals\Ajent-refactor-maintain-03-2023
+FLUTTER_APPLICATION_PATH=D:\Finals\Tutor-Time
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
