--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   textfield_tags: ^2.0.2
   url_launcher: ^6.0.6
   odometer: ^3.0.0
+  thumbnailer: ^2.2.0
+  file_picker: ^5.2.5
+  pdf_render: ^1.3.8
+  path_provider: ^2.0.13
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
@@ -76,6 +80,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/images/
     - assets/json/
   #   - images/a_dot_burr.jpeg
